# roomrtc

./: .gitignore  Cargo.toml  README.md  config.conf
.github/workflows/: ci.yml
src/: audio_output.rs  camera.rs  certificate.rs  config.rs  lib.rs  microphone.rs  signaling_server.rs  utils.rs
src/app/: call.rs  file_transfer.rs  handlers.rs  lobby.rs  logging.rs  media.rs  mod.rs  multiplexer.rs  signaling_client.rs  ui.rs
src/codec/: decode_thread.rs  h264.rs  mod.rs  opus.rs  rgb_to_rgba_thread.rs
src/protocols/: data_channel.rs  dtls.rs  dtls_utils.rs  h264_rtp.rs  ice.rs  jitter_buffer.rs  message.rs  mod.rs  opus_rtp.rs  rtcp.rs  rtcp_receiver.rs  rtp_packet.rs  srtp.rs  tls.rs
src/sdp/: mod.rs  sdp_core.rs  sdp_utils.rs
tests/: client_server_integration.rs  dtls_handshake.rs  file_transfer_api.rs  media_transmission.rs  sdp_negotiation.rs
