[package]
name = "roomrtc"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.28"
egui = "0.28"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }
rand = "0.9.2"
chrono = "0.4.42"
openh264 = "0.8"
if-addrs = "0.7"
sha2 = "0.10"
rcgen = "0.12"
aes-gcm = "0.10"
hkdf = "0.12"
sctp-proto = "0.6"
bytes = "1.11.0"
opus = "0.3"
cpal = "0.15"
rfd = "0.14"
hex = "0.4"
